winxp ie8 input bullets not showing fix

--- a/css/ie8.css
+++ b/css/ie8.css
@@ -1,3 +1,6 @@
   .image-container img {
         min-width: 138px;
 }
+ input {
+    font-family: Arial;
+  }
